Add correct tags endpoints
