# src/Pinventory.Pins.Api/Tags/TagCatalogIdDto.cs
@@ -1,0 +1,3 @@
+﻿namespace Pinventory.Pins.Api.Tags;
+
+public record TagCatalogIdDto(Guid? OwnerUserId, Guid InternalTagCatalogId);
