# src/Pinventory.Pins.Api/Tags/TagCatalogResponse.cs
@@ -1,0 +1,3 @@
+﻿namespace Pinventory.Pins.Api.Tags;
+
+public record TagCatalogDto(IEnumerable<string> Tags);
